--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-before_script:
- - chmod +x gradlew
 language: java
 jdk:
-  - oraclejdk8
+  - oraclejdk7
+  - openjdk7
+ 
+before_install:
+ - chmod +x gradlew
