--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: java
 jdk:
-  - oraclejdk7
-  - openjdk7
+  - oraclejdk8
+  - openjdk8
  
 before_install:
  - chmod +x gradlew
+
+env:
+  global:
+    - JAVA_HOME=/usr/lib/jvm/java-8-oracle
