--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.21'
     testImplementation 'junit:junit:4.13'
     implementation 'com.google.code.gson:gson:2.8.6'
+
+	implementation 'org.projectlombok:lombok:1.18.10'
+	annotationProcessor 'org.projectlombok:lombok:1.18.10'
 }
