--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,13 @@ repositories {
     jcenter()
 }
 
+java {
+	sourceCompatibility = JavaVersion.VERSION_1_8
+	targetCompatibility = JavaVersion.VERSION_1_8
+}
+
 
 dependencies {
-    implementation 'org.slf4j:slf4j-api:1.7.21'
-    testImplementation 'junit:junit:4.13'
     implementation 'com.google.code.gson:gson:2.8.6'
 
 	implementation 'org.projectlombok:lombok:1.18.10'
